--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "faker": "^5.1.0",
     "magic-sdk": "^4.0.0",
     "materialize-css": "^1.0.0",
     "raven-js": "^3.27.2",
